--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Machines/Machine_Details.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Machines/Machine_Details.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.machine_id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.machine_id)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.room_id)
         </dt>
 
