--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Rooms/Room_Details.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Rooms/Room_Details.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.room_id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.room_id)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.room_name)
         </dt>
 
