--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Rooms/View_Rooms.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Rooms/View_Rooms.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<FIZ_Markerspace.Models.Room>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Rooms";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Rooms</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create_Room")
