--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Service/Service_Machine.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Service/Service_Machine.cshtml
@@ -5,46 +5,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Service Machine</h2>
 
-<form id="Create_Machine">
-    <br />
+
+<form id="Create_Room">
     <label for="machine_name">Machine Name</label>
-    <input id="machine_name" name="machine_name" class="form-control" placeholder="Machine Name" type="text" />
-    <br />
-    <label for="room_name">Room Name</label>
-    <select id="room_name" name="role_access" class="form-control">
-        <option value="" disabled selected>Select Room</option>
-        @foreach (var room in Model.Rooms)
+    <select id="machine_name" name="machine_name" class="form-control">
+        <option value="" disabled selected>Select Machine</option>
+        @foreach (var item in Model.Machines)
         {
-            <option value="@room.room_name">@room.room_name</option>
+            <option value="@item.machine_name">@item.machine_name</option>
         }
 
-    </select>
-    <br />
-    <label for="service_level">Service Level</label>
-    <input id="service_level" name="service_level" class="form-control" placeholder="Service Level" type="text" />
-    <br />
-    <label for="current_threshold">Current Threshold</label>
-    <input id="current_threshold" name="current_threshold" class="form-control" placeholder="Current Threshold" type="text" />
-    <br />
-    <label for="role_access">Role Access</label>
-    <select id="role_access" name="role_access" class="form-control">
-        <option value="" disabled selected>Select Role</option>
-        <option value="1">Student</option>
-        <option value="2">Assistant</option>
-        <option value="3">Room Mananger</option>
-        <option value="4">Admin</option>
-        <option value="5">IT</option>
     </select>
     <br />
     <input type="button" value="Submit" data-toggle="modal" data-target="#myModal" />
 </form>
 
-
 <div>
-    @Html.ActionLink("Back to List", "View_Machines")
+    @Html.ActionLink("Back to List", "View_Machines", "Machines")
 </div>
+
 
 <script>
     $(document).ready(function () {
@@ -54,28 +35,22 @@
             var AUTH_PASSWORD = $("#auth_password").val();
             //User Data
             var MACHINE_NAME = $("#machine_name").val();
-            var ROOM_NAME = $("#room_name").val();
-            var SERVICE_LEVEL = $("#service_level").val();
-            var CURRENT_THRESHOLD = $("#current_threshold").val();
-            var ROLE_ACCESS = $("#role_access").val();
 
             $.ajax({
                 type: "POST",
-                url: '@Url.Action("Create_Machine")',
+                url: '@Url.Action("Service_Machine")',
                 data: JSON.stringify({
                     //Authentication Data
                     AUTH_WSU_ID: AUTH_WSU_ID, AUTH_PASSWORD: AUTH_PASSWORD,
-                    //Room Data
-                    MACHINE_NAME: MACHINE_NAME, ROOM_NAME: ROOM_NAME, SERVICE_LEVEL: SERVICE_LEVEL,
-                    CURRENT_THRESHOLD: CURRENT_THRESHOLD, CURRENT_THRESHOLD: CURRENT_THRESHOLD,
-                    ROLE_ACCESS: ROLE_ACCESS
+                    //Machine Data
+                    MACHINE_NAME: MACHINE_NAME 
                 }),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 success: function (return_data) {
                     if (return_data.result == true) {
                         swal({
-                            title: "Machine Added!",
+                            title: "Success!",
                             text: return_data.message,
                             icon: "success",
                         });
