--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Users/Add_To_Room.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Users/Add_To_Room.cshtml
@@ -1,50 +1,33 @@
 ﻿@model dynamic
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add To Room";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var user_id = Model.User.user_id;
+    var wsu_id = Model.User.wsu_id;
+    var first_name = Model.User.first_name;
+    var last_name = Model.User.last_name;
+    var role = Model.User.role;
+    var exp_level = Model.User.exp_level;
 }
 
-<h2>Create</h2>
+<h2>Add To Room</h2>
 
-<form id="Create_Machine">
-    <br />
-    <label for="machine_name">Machine Name</label>
-    <input id="machine_name" name="machine_name" class="form-control" placeholder="Machine Name" type="text" />
-    <br />
+<p>Select a room for @first_name to have machine access</p>
+
+<form id="Add_To_Room">
     <label for="room_name">Room Name</label>
-    <select id="room_name" name="role_access" class="form-control">
+    <select id="room_name" name="room_name" class="form-control">
         <option value="" disabled selected>Select Room</option>
         @foreach (var room in Model.Rooms)
         {
             <option value="@room.room_name">@room.room_name</option>
         }
-
-    </select>
-    <br />
-    <label for="service_level">Service Level</label>
-    <input id="service_level" name="service_level" class="form-control" placeholder="Service Level" type="text" />
-    <br />
-    <label for="current_threshold">Current Threshold</label>
-    <input id="current_threshold" name="current_threshold" class="form-control" placeholder="Current Threshold" type="text" />
-    <br />
-    <label for="role_access">Role Access</label>
-    <select id="role_access" name="role_access" class="form-control">
-        <option value="" disabled selected>Select Role</option>
-        <option value="1">Student</option>
-        <option value="2">Assistant</option>
-        <option value="3">Room Mananger</option>
-        <option value="4">Admin</option>
-        <option value="5">IT</option>
     </select>
     <br />
     <input type="button" value="Submit" data-toggle="modal" data-target="#myModal" />
 </form>
-
-
-<div>
-    @Html.ActionLink("Back to List", "View_Machines")
-</div>
 
 <script>
     $(document).ready(function () {
@@ -53,29 +36,31 @@
             var AUTH_WSU_ID = $("#auth_wsu_id").val();
             var AUTH_PASSWORD = $("#auth_password").val();
             //User Data
-            var MACHINE_NAME = $("#machine_name").val();
+            var USER_ID = "@user_id";
+            var WSU_ID = "@wsu_id";
+            var FIRST_NAME = "@first_name";
+            var LAST_NAME = "@last_name";
+            var ROLE = @role;
+            var EXP_LEVEL = @exp_level;
             var ROOM_NAME = $("#room_name").val();
-            var SERVICE_LEVEL = $("#service_level").val();
-            var CURRENT_THRESHOLD = $("#current_threshold").val();
-            var ROLE_ACCESS = $("#role_access").val();
-
+            debugger;
             $.ajax({
                 type: "POST",
-                url: '@Url.Action("Create_Machine")',
+                url: '@Url.Action("Add_To_Room")',
                 data: JSON.stringify({
                     //Authentication Data
                     AUTH_WSU_ID: AUTH_WSU_ID, AUTH_PASSWORD: AUTH_PASSWORD,
-                    //Room Data
-                    MACHINE_NAME: MACHINE_NAME, ROOM_NAME: ROOM_NAME, SERVICE_LEVEL: SERVICE_LEVEL,
-                    CURRENT_THRESHOLD: CURRENT_THRESHOLD, CURRENT_THRESHOLD: CURRENT_THRESHOLD,
-                    ROLE_ACCESS: ROLE_ACCESS
+                    //User Data
+                    USER_ID: USER_ID, WSU_ID: WSU_ID, FIRST_NAME: FIRST_NAME,
+                    LAST_NAME: LAST_NAME, ROLE: ROLE, EXP_LEVEL: EXP_LEVEL,
+                    ROOM_NAME: ROOM_NAME,
                 }),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 success: function (return_data) {
                     if (return_data.result == true) {
                         swal({
-                            title: "Machine Added!",
+                            title: "User Added!",
                             text: return_data.message,
                             icon: "success",
                         });
@@ -103,3 +88,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
