--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Users/User_Details.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Users/User_Details.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.user_id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.user_id)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.wsu_id)
         </dt>
 
@@ -57,14 +65,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.exp_level)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.password)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.password)
         </dd>
 
         <dt>
