--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Home/Index.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Home/Index.cshtml
@@ -6,24 +6,36 @@
 <div class="jumbotron">
     <h1>Frank Innovation Zone</h1>
     <p class="lead">Hands-on Student Learning Space</p>
-    <p><a href="https://vcea.wsu.edu/fiz/about/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://vcea.wsu.edu/fiz/about/" class="btn btn-primary btn-lg" style="background-color:crimson;">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Makerspace</h2>
         <p>
+            "A makerspace is a collaborative work space inside a school, library or separate public/private facility for making, learning, exploring and sharing that uses high
+            tech to no tech tools.  These spaces are open to kids, adults, and entrepreneurs and have a variety of maker equipment including 3Dprinters, laser cutters, cnc machines,
+            soldering irons and even sewing machines..."
         </p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.makerspaces.com/what-is-a-makerspace/">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>About the Fiz</h2>
+        <p>
+            "With support from the Raintree Foundation, the Frank Innovation Zone (The FIZ) was established in 2014 to foster the development of entrepreneurial skills in more
+            students and provide them with access to a wide range of hands-on learning experiences. The FIZ is our makerspace for students from all disciplines in VCEA, we pride
+            ourselves on helping make your ideas a reality..."
+        </p>
+        <p><a class="btn btn-default" href="https://vcea.wsu.edu/fiz/about/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Industry 4.0</h2>
-        <p></p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+        <p>
+            "Industry 4.0 is used interchangeably with the fourth industrial revolution and represents a new stage in the organization and control of the industrial value chain.
+            Cyber-physical systems form the basis of Industry 4.0 (e.g., ‘smart machines’). They use modern control systems, have embedded software systems and dispose of an
+            Internet address to connect and be addressed via IoT (the Internet of Things)..."
+        </p>
+        <p><a class="btn btn-default" href="https://www.i-scoop.eu/industry-4-0/#:~:text=Industry%204.0%20is%20the%20current,called%20a%20%E2%80%9Csmart%20factory%E2%80%9D.">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Rooms & Machines</h2>
-        <p></p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
-    </div>
+
 </div>
