--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Shared/_Layout.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Shared/_Layout.cshtml
@@ -84,7 +84,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <img src="~/Content/Images/wsu-signature-vertical.svg" style=" display: block; margin-left: auto; margin-right: auto; width: 15%;" />
+            <p>&copy; @DateTime.Now.Year - FIZ Makerspace Application</p>
         </footer>
     </div>
 
