--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Users/Delete_User.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Users/Delete_User.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.wsu_id)
         </dt>
 
-        <dd>
+        <dd id="wsu_id">
             @Html.DisplayFor(model => model.wsu_id)
         </dd>
 
@@ -86,12 +86,84 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+    <input type="button" value="Delete" data-toggle="modal" data-target="#myModal" /> |
+    @Html.ActionLink("Back to List", "View_Users")
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "View_Users")
-        </div>
-    }
+    @*@using (Html.BeginForm()) {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "View_Users")
+            </div>
+        }*@
 </div>
+
+<script>
+    $(document).ready(function () {
+        $("#submit_authentication").click(function (event) {
+            //Authentication Data
+            var AUTH_WSU_ID = $("#auth_wsu_id").val();
+            var AUTH_PASSWORD = $("#auth_password").val();
+            //User Data
+            var WSU_ID = @(Html.DisplayFor(model => model.wsu_id))
+
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("Delete_Helper")',
+                data: JSON.stringify({
+                    //Authentication Data
+                    AUTH_WSU_ID: AUTH_WSU_ID, AUTH_PASSWORD: AUTH_PASSWORD,
+                    //User Data
+                    WSU_ID: WSU_ID
+                }),
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (return_data) {
+                    if (return_data.result == true) {
+                        swal({
+                            title: "User Added!",
+                            text: return_data.message,
+                            icon: "success",
+                        });
+                    }
+                    if (return_data.result == false) {
+                        swal({
+                            title: "Error!",
+                            text: return_data.message,
+                            icon: "warning",
+                        });
+                    }
+                },
+                error: function (return_data) {
+                    if (return_data.result == true) {
+                        swal({
+                            title: "User Deleted!",
+                            text: return_data.message,
+                            icon: "success",
+                        });
+                    }
+                    if (return_data.result == false) {
+                        swal({
+                            title: "Error!",
+                            text: return_data.message,
+                            icon: "warning",
+                        });
+                    }
+                    else {
+                        swal({
+                            title: "Error!",
+                            text: "There was a problem submitting your data, check your inputs!",
+                            icon: "warning",
+                        });
+                    }
+                },
+            });
+        });
+    });
+</script>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
