--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Rooms/Edit_Room.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Rooms/Edit_Room.cshtml
@@ -16,7 +16,7 @@
     <label for="room_name">Room Name</label>
     <input id="room_name" name="wsu_name" value="@room_name"class="form-control" type="text" />
     <br />
-    <input id="room_submit" type="button" value="Submit"/>
+    <input type="button" value="Submit" data-toggle="modal" data-target="#myModal" />
 </form>
 
 <div>
@@ -26,26 +26,40 @@
 
 <script>
     $(document).ready(function () {
-        $("#room_submit").click(function (event) {
+        $("#submit_authentication").click(function (event) {
             //Room Data
             var ROOM_ID = "@room_id"
             var ROOM_NAME = $("#room_name").val();
+            //Authentication Data
+            var AUTH_WSU_ID = $("#auth_wsu_id").val();
+            var AUTH_PASSWORD = $("#auth_password").val();
 
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("Edit_Room")',
                 data: JSON.stringify({
+                    //Authentication Data
+                    AUTH_WSU_ID: AUTH_WSU_ID, AUTH_PASSWORD: AUTH_PASSWORD,
                     //Room Data
                     ROOM_ID: ROOM_ID, ROOM_NAME: ROOM_NAME
                 }),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
-                success: function (data) {
-                    swal({
-                        title: "Room Updated!",
-                        text: "You updated " + ROOM_NAME + "!",
-                        icon: "success",
-                    });
+                success: function (return_data) {
+                    if (return_data.result == true) {
+                        swal({
+                            title: "Room Updated!",
+                            text: "You updated " + ROOM_NAME + "!",
+                            icon: "success",
+                        });
+                    }
+                    if (return_data.result == false) {
+                        swal({
+                            title: "Error!",
+                            text: return_data.message,
+                            icon: "warning",
+                        });
+                    }
                 },
                 error: function (data) {
                     swal({
