--- a/FIZ_Markerspace/FIZ_Markerspace/Views/Users/Delete_User.cshtml
+++ b/FIZ_Markerspace/FIZ_Markerspace/Views/Users/Delete_User.cshtml
@@ -122,7 +122,7 @@
                 success: function (return_data) {
                     if (return_data.result == true) {
                         swal({
-                            title: "User Added!",
+                            title: "User Deleted!",
                             text: return_data.message,
                             icon: "success",
                         });
